--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-torch
-transformers
-pandas
-scikit-learn
-numpy
+transformers==4.36.2
+pandas==2.1.4
+scikit-learn==1.3.2
+tqdm==4.66.1
+numpy==1.26.2
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
